# codebase-analyzer-cli

./: .gitignore  LICENSE  README.md  analyzer.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
